fix header z-index

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,7 +2,7 @@
     position: sticky;
     top: 0;
     left: 0;
-    z-index: 55;
+    z-index: 4;
     transition: all 300ms ease;
     display: flex;
     justify-content: space-between;
