--- a/src/components/NewCommentModal/NewCommentModal.module.css
+++ b/src/components/NewCommentModal/NewCommentModal.module.css
@@ -8,7 +8,7 @@
     justify-content: center;
     align-items: center;
     background-color: rgba(0, 0, 0, 0.4);
-    z-index: 2;
+    z-index: 5;
 }
 
 .content {
